# docbox-serverless-lambda

./: Cargo.toml  README.md  cspell.json
.github/workflows/: build-release.yml
lambdas/http/: Cargo.toml  README.md
lambdas/http/src/: docs.rs  error.rs  main.rs  service.rs
lambdas/http/src/extensions/: max_file_size.rs  mod.rs
lambdas/http/src/middleware/: action_user.rs  api_key.rs  mod.rs  tenant.rs
lambdas/http/src/models/: admin.rs  document_box.rs  file.rs  folder.rs  link.rs  mod.rs  task.rs  utils.rs
lambdas/http/src/routes/: admin.rs  document_box.rs  file.rs  folder.rs  link.rs  mod.rs  task.rs  utils.rs
lambdas/presigned-cleanup/: Cargo.toml  README.md
lambdas/presigned-cleanup/src/: event_handler.rs
lambdas/upload-completion/: Cargo.toml  README.md
lambdas/upload-completion/src/: event_handler.rs  main.rs
layers/: make-poppler-layer-amd64.sh  make-poppler-layer-arm64.sh  poppler.Dockerfile
