[workspace]
resolver = "3"
members = [
    "lambdas/http",
    "lambdas/presigned-cleanup",
    "lambdas/upload-completion",
]

[workspace.dependencies]
docbox-core = "0.7.0"
docbox-database = "0.6.0"
docbox-processing = "0.2.0"
docbox-search = "0.6.0"
docbox-secrets = "0.3.0"
docbox-storage = "0.4.0"
docbox-web-scraper = "0.4.0"

# Futures utilities
futures = "=0.3.31"


# Bytes type used for cheap shared bytes (and utilities)
bytes = "=1.10.1"
bytes-utils = "=0.1.4"

# Logging
tracing = "=0.1.41"

# Error handling
thiserror = "=2.0.17"

# Date & time
chrono = { version = "=0.4.42", features = ["serde"] }

# AWS configuration
aws-config = { version = "=1.8.10", features = ["behavior-version-latest"] }

# URL parsing
url = "=2.5.7"

# UUID v4 support
uuid = { version = "=1.18.1", features = ["v4", "serde"] }


# Serialization and JSON
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
serde_with = "=3.15.0"

# Mime types, parsing, extension guessing, reverse mime lookup
mime = "=0.3.17"
mime_guess = "=2.0.5"
mime2ext = "=0.1.54"

# HTTP primitives
http = "=1.3.1"

# Validation
garde = { version = "=0.22.0", features = ["derive", "full"] }

# OpenAPI spec generation
utoipa = { version = "=5.4.0", features = [
    "url",
    "uuid",
    "chrono",
    "axum_extras",
] }

dotenvy = "0.15.7"
