[package]
name = "docbox-http-lambda"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda_http = "1.0.0"

tokio = { version = "1", features = ["macros"] }

# HTTP server framework
axum = { version = "=0.8.6" }

# HTTP layers for ratelimiting, CORS, and tracing
tower-http = { version = "=0.6.6", features = ["limit", "cors", "trace"] }
tower = { version = "=0.5.2" }

# Validation & Axum validation integration
garde.workspace = true
axum-valid = { version = "=0.24.0", default-features = false, features = [
    "garde",
    "basic",
    "typed_multipart",
    "full_garde",
] }

tracing.workspace = true

mime.workspace = true
mime_guess.workspace = true

utoipa.workspace = true

bytes.workspace = true

uuid.workspace = true

docbox-core.workspace = true
docbox-database.workspace = true
docbox-processing.workspace = true
docbox-search.workspace = true
docbox-secrets.workspace = true
docbox-storage.workspace = true
docbox-web-scraper.workspace = true

# Serialization and JSON
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true

# Error handling
thiserror.workspace = true

chrono.workspace = true
tower-service = "0.3.3"
http-body-util = { version = "0.1.3", features = ["full"] }
futures.workspace = true
dotenvy.workspace = true
