[package]
name = "upload-completion"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config.workspace = true
aws_lambda_events = { version = "1.0.0", default-features = false, features = ["s3"] }

lambda_runtime = "1.0.1"
tokio = { version = "1", features = ["macros"] }

docbox-core.workspace = true
docbox-database.workspace = true
docbox-processing.workspace = true
docbox-search.workspace = true
docbox-secrets.workspace = true
docbox-storage.workspace = true

thiserror.workspace = true

# URL encoding to decode object key names
urlencoding = "=2.1.3"

tracing.workspace = true
dotenvy.workspace = true
